# dev-exp

./: .gitignore  LICENSE  README.md
code-rag-system/: INSTALL.md  config-ollama.yaml  config.yaml  examples.py  quickstart.py  requirements.txt  run_with_ollama.py
code-rag-system/src/: __init__.py  chunker.py  cli.py  code_graph.py  embedding.py  llm.py  pipeline.py  retriever.py  vector_store.py
dev-crew/: .gitignore  README.md  pyproject.toml
dev-crew/.agents/skills/devcrew/: SKILL.md
dev-crew/src/devcrew/: __init__.py  cli.py
dev-crew/src/devcrew/crew/: __init__.py  agents.py  crew.py  tasks.py
dev-crew/src/devcrew/manager/: __init__.py  documentor.py  project.py  task_tracker.py
dev-crew/src/devcrew/persistence/: __init__.py  file_store.py
dev-crew/src/devcrew/ui/: __init__.py  tui.py  web.py
dev-crew/templates/: dashboard.html  project.html
multi-agent-orch/: README.md
multi-agent-orch/docs/: multi-agent-system-design.md
website_crew/: .env.example  .gitignore  crew.py  main.py  requirements.txt
website_crew/config/: agents.yaml  tasks.yaml
website_crew/tools/: code_writer.py  file_manager.py
