[project]
name = "devcrew"
version = "0.1.0"
description = "Multi-Agent Development Team using CrewAI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "crewai>=0.70.0",
    "crewai-tools>=0.10.0",
    "flask>=3.0.0",
    "textual>=0.80.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
    "markdown>=3.5.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
